syntax = "proto3";
package state;

message MockedEntry {
  string ID = 1;
  int64 LastAdded = 2;
  int64 LastDeleted = 3;
  string Data = 4;
}

message MockedEntryList {
  repeated MockedEntry MockedEntries = 1;
}